conv/deployment-conv-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-conv-api
spec:
  replicas: 1
  selector:
    matchLabels:
      components: conv-api
  template:
    metadata:
      name: conv-api
      labels:
        components: conv-api
    spec:
      containers:
        - name: conv-api
          image: antonlarichev/conv-api:1.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: pvc-conv-api
              mountPath: /opt/app/uploads
      volumes:
        - name: pvc-conv-api
          persistentVolumeClaim:
            claimName: pvc-conv-api
