conv/deployment-conv-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-conv-service
spec:
  replicas: 1
  selector:
    matchLabels:
      components: conv-service
  template:
    metadata:
      name: conv-service
      labels:
        components: conv-service
    spec:
      containers:
        - name: conv-service
          image: antonlarichev/conv-service:1.0
          # ports:
          #   - containerPort: 81
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
