conv/service-conv-app.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    components: conv-app
